# cpp-conway-gol

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/lib/: canvas.hpp  cell.hpp  grid.hpp  lib.hpp
src/: CMakeLists.txt  canvas.cpp  cell.cpp  grid.cpp  lib.cpp
tests/: CMakeLists.txt  canvasTests.cpp  gridTests.cpp  tests.cpp
